2003-07-18  Evandro Fernandes Giovanini <evandrofg@ig.com.br>

	* gnome-system-log.desktop.in: Use icon from the icon theme.

2003-06-08  Dennis Cranston <dennis_cranston at yahoo com>

	* zoom.c:  Prevent a crash when displaying entry details.

2003-06-06  Dennis Cranston <dennis_cranston at yahoo com>

	* about.c: "GNOME System Log Viewer" -> "System Log Viewer".

2003-05-31  Dennis Cranston <dennis_cranston at yahoo com>

	* actions.c, calendar.c, info.c, logview.c, monitor.c,
	zoom.c:  HIG related improvements.

2003-05-30  Dennis Cranston <dennis_cranston at yahoo com>

	* actions.c, info.c, log_repaint.c, logrtns.c, logview.c,
	monitor.c:  Various compiler warning fixes.

2003-05-19  Christian Neumair  <chris@gnome-de.org>

	* about.c: Don't mark copyright string for translation, added
	hex-escaped copyright character, changed comment to something
	more meaningful.

2003-05-19  Glynn Foster  <glynn.foster@sun.com>

	* log_repaint.c: Fixed #103481 for large logs crashing.

2003-05-19  Glynn Foster  <glynn.foster@sun.com>

	* Defining timezonevar before including time.h is necessary 
	for using timezone variable on Cygwin. Patch from Masahiro Sakai.
	Fixes #111267.

2003-05-19  Glynn Foster  <glynn.foster@sun.com>

	* logview.schemas.in: Fix #102234.

2003-05-19  Glynn Foster  <glynn.foster@sun.com>

	* logview.c: Use gnome-system-log in the gconf key, rather than
	logview, since that is what the schema is for. Fixes #103484.

2003-05-19  Glynn Foster  <glynn.foster@sun.com>

	* about.c: Fix #101772.

2003-05-19  Glynn Foster  <glynn.foster@sun.com>

	* logview.c: Add check, just in case this fixes #111949.

2003-05-19  Glynn Foster  <glynn.foster@sun.com>

	* logview.c: Avoid double free. Patch from marcus@freebsd.org.

2003-02-23  Takeshi AIHANA <aihana@gnome.gr.jp>

	* help/ja/*: added Japanese translations by
				KAMAGASAKO Masatoshi <emerald@gnome.gr.jp>.
	* help/ja/Makefile.am:  added ja into SUBDIRS.

2003-02-16  Kjartan Maraas  <kmaraas@gnome.org>
